Partial JDK 17 support
Signed-off-by: Andy Grove <andygrove@nvidia.com>